@@ -1,41 +1,49 @@
 package com.tdd.stringcalculator;
+
 import java.util.Arrays;
 import java.util.List;
+import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class StringCalculator {
-    private int addCalledCount = 0;
-    private static final String DEFAULT_DELIMITER = ",";
+    private static int addMethodCallCount = 0;
 
-    public int Add(String numbers) {
-        addCalledCount++;
-        String[] numStrings = splitNumbers(numbers, DEFAULT_DELIMITER);
-        List<Integer> nums = parseAndValidateNumbers(numStrings);
-        return sumWithoutNegatives(nums);
-    }
-
-    private String[] splitNumbers(String numbers, String delimiter) {
+    public static int add(String numbers) {
+        addMethodCallCount++;
         if (numbers.isEmpty()) {
-            return new String[]{};
+            return 0;
         }
-        // Replace new lines after delimiter with an empty string
-        numbers = numbers.replaceAll(Pattern.quote(delimiter) + "\n", delimiter);
+        String delimiterRegex = ",|\n";
 
-        // Replace new lines between numbers with the default delimiter
-        numbers = numbers.replaceAll("\n", delimiter);
+        if (numbers.startsWith("//")) {
+            Matcher matcher = Pattern.compile("//\\[?(.*?)]?\\n(.*)").matcher(numbers);
+            if (matcher.matches()) {
+                String customDelimiterPart = matcher.group(1);
+                String numbersPart = matcher.group(2);
 
-        // Split by delimiter
-        String[] numStrings = numbers.split(Pattern.quote(delimiter));
-
-        // Check for invalid input like "1,\n"
-        if (Arrays.stream(numStrings).anyMatch(String::isEmpty)) {
-            throw new IllegalArgumentException("Invalid input");
+                String[] customDelimiters = parseCustomDelimiters(customDelimiterPart);
+                delimiterRegex = Stream.concat(Arrays.stream(customDelimiters), Stream.of(",", "\n"))
+                        .map(Pattern::quote)
+                        .collect(Collectors.joining("|"));
+                numbers = numbersPart;
+            }
         }
 
-        return numStrings;
+        String[] stringArrayNumbers = splitNumbers(numbers, delimiterRegex);
+        List<Integer> integerListNumbers=parseAndValidateNumbers(stringArrayNumbers);
+        return sumWithoutNegatives(integerListNumbers);
     }
-    private List<Integer> parseAndValidateNumbers(String[] numStrings) {
+
+    private static String[] splitNumbers(String numbers, String delimiterRegex) {
+        return numbers.split(delimiterRegex);
+    }
+
+    private static String[] parseCustomDelimiters(String customDelimiterPart) {
+        return customDelimiterPart.split("]\\[");
+    }
+    private static List<Integer> parseAndValidateNumbers(String[] numStrings) {
         return Arrays.stream(numStrings)
                 .map(numStr -> {
                     try {
@@ -47,17 +55,16 @@ public class StringCalculator {
                 .filter(n -> n <= 1000)  // Ignore numbers > 1000
                 .collect(Collectors.toList());
     }
-
-    private int sumWithoutNegatives(List<Integer> numbers) {
+    private static int sumWithoutNegatives(List<Integer> numbers) {
         if (numbers.stream().anyMatch(n -> n < 0)) {
-            throw new IllegalArgumentException("negatives not allowed: " + numbers.stream().filter(n -> n < 0).collect(Collectors.toList()));
+            throw new IllegalArgumentException("negatives not allowed: " + numbers.stream().filter(n -> n < 0).toList());
         }
         return numbers.stream()
                 .mapToInt(Integer::intValue)
                 .sum();
     }
 
-    public int GetCalledCount() {
-        return addCalledCount;
+    public static int getCalledCount() {
+        return addMethodCallCount;
     }
 }
